obile phone menu not collapsing fix

--- a/perasis/static_files/css/buttons.css
+++ b/perasis/static_files/css/buttons.css
@@ -60,6 +60,9 @@ a:focus, a:hover {
   width: 100%;
 }
 
+.btn.btn-height-100percent{
+  height: : 100%;
+}
 /**/
 .btn.btn-main-blue{
   background-color:#5696CB;
